# CombattantQT

./: .gitignore  CMakeLists.txt  CombattantsQT.sln
CombattantModelsInModels/: CombattantModelsInModels.vcxproj  CombattantModelsInModels.vcxproj.filters  CombattantView.ui  FormView.cpp  FormView.h  WeaponView.ui  cDataItem.cpp  cDataItem.h  cDataItemCombattant.cpp  cDataItemCombattant.h  cDataItemModel.cpp  cDataItemModel.h  cDataItemModelCombattant.cpp  cDataItemModelCombattant.h  cDataItemModelWeapon.cpp  cDataItemModelWeapon.h  cDataItemWeapon.cpp  cDataItemWeapon.h  cMainWindow.cpp  cMainWindow.h  cMainWindow.ui  cModelBase.cpp  cModelBase.h  cWeaponModel.cpp  cWeaponModel.h  cWeaponView.cpp  cWeaponView.h  combattant.cpp  combattant.h  combattantlistmodel.cpp  combattantlistmodel.h  combattantmodel.cpp  combattantmodel.h  combattantview.cpp  combattantview.h  proxytargetmodel.cpp  proxytargetmodel.h  targetview.cpp  targetview.h
CombattantModelsInModels/GeneratedFiles/: ui_CombattantView.h  ui_TargetView.h  ui_cMainWindow.h
CombattantModelsInModels/GeneratedFiles/Debug/: moc_FormView.cpp
CombattantModelsInModels/x64/Debug/: qt.txt
CombattantModelsInModels/x64/Debug/Combatta.7F98001E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CombattantModelsInModels.lastbuildstate  CombattantModelsInModels.write.1u.tlog  QtMoc.read.1u.tlog  QtMoc.write.1u.tlog  QtUic.read.1u.tlog  QtUic.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CombattantProxy/: CombattantProxy.vcxproj  CombattantProxy.vcxproj.filters  ProxyWeapon.cpp  ProxyWeapon.h  cDataItem.cpp  cDataItem.h  cDataItemCombattant.cpp  cDataItemCombattant.h  cDataItemModel.h  cDataItemWeapon.cpp  cDataItemWeapon.h  cMainWindow.cpp  cMainWindow.h  cMainWindow.ui  cModelBase.cpp  cModelBase.h  cProxyFilterSortBase.cpp  cWeaponModel.cpp  cWeaponModel.h  cWeaponView.cpp  cWeaponView.h  combattant.cpp  combattant.h  combattantlistmodel.cpp  combattantlistmodel.h  combattantmodel.cpp  combattantview.cpp  combattantview.h  proxytargetmodel.cpp  proxytargetmodel.h  targetview.cpp  targetview.h
CombattantProxy/GeneratedFiles/: ui_CombattantView.h  ui_WeaponView.h  ui_cMainWindow.h
CombattantProxy/GeneratedFiles/Debug/: moc_ProxyWeapon.cpp  moc_cMainWindow.cpp
CombattantPython/: Combattant.py  DataWrapper.py  Main.py  MainWindow.py  MainWindow.ui  Model.py
CombattantTreeFlatter/: cMainWindow.cpp  cMainWindow.h
CombattantTreeFlatter/CombattantFlatter/: CombattantFlatter.vcxproj  CombattantFlatter.vcxproj.filters
CombattantTreeFlatter/CombattantFlatter/GeneratedFiles/Debug/: moc_ProxyWeapon.cpp  moc_cMainWindow.cpp  moc_proxytargetmodel.cpp
CombattantTreeFlatter/Data/: combattant.cpp
CombattantTreeFlatter/DataItem/: cDataItem.cpp  cDataItem.h  cDataItemCombattant.h  cDataItemWeapon.cpp  cDataItemWeapon.h
CombattantTreeFlatter/Model/: ProxyWeapon.cpp  cModelBase.cpp  cProxyFilterSortBase.h  combattantlistmodel.cpp
CombattantTreeFlatter/View/: CombattantView.ui  TargetView.ui
CombattantsQT/: CombattantView.ui  CombattantsQT.vcxproj  CombattantsQT.vcxproj.filters  cMainWindow.cpp  cMainWindow.h  cMainWindow.ui  combattant.cpp  combattant.h  combattantlistmodel.cpp  combattantlistmodel.h  combattantmodel.cpp  combattantmodel.h  combattantview.cpp  combattantview.h  proxytargetmodel.cpp  targetview.h
CombattantsQT/GeneratedFiles/: ui_CombattantView.h  ui_cMainWindow.h
CombattantsQT/GeneratedFiles/Debug/: moc_proxytargetmodel.cpp
CombattantsQT/x64/Debug/CombattantsQT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CombattantsQT.write.1u.tlog  QtMoc.read.1u.tlog  QtMoc.write.1u.tlog  QtRcc.read.1u.tlog  QtRcc.write.1u.tlog  QtUic.read.1u.tlog  QtUic.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: CombattantModelsInModels.ilk  CombattantsQT.ilk
